# openenclave-security

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OWNERS  README.md  build.sh
.github/workflows/: github-issues.json  onefuzz-workflow.yml
cmake/: fuzzer_settings.cmake
docs/: CodeOfConduct.md
docs/GettingStartedDocs/: best_practices_secure_enclaves.md
scripts/: run.sh
src/dynamic/fuzzing/: CMakeLists.txt  README.md
src/dynamic/fuzzing/common/: fuzzsupport.edl  oefuzzer.h
src/dynamic/fuzzing/create/: CMakeLists.txt  create.edl
src/dynamic/fuzzing/create/enclave_corpus/: CMakeLists.txt
src/dynamic/fuzzing/create/enclave_corpus/enclave/: CMakeLists.txt  enc.c
src/dynamic/fuzzing/create/host/: CMakeLists.txt  elf.h  host.cpp
src/dynamic/fuzzing/enclaveapis/: enclaveapis.edl
src/dynamic/fuzzing/enclaveapis/enc/: CMakeLists.txt  enc.cpp
src/dynamic/fuzzing/enclaveapis/host/: CMakeLists.txt  host.cpp
src/dynamic/fuzzing/fileapihook/: CMakeLists.txt  fileapihook.c
src/dynamic/fuzzing/fuzzsupport/: CMakeLists.txt
src/dynamic/fuzzing/fuzzsupport/enc/: CMakeLists.txt  enc.c  syscall.c  syscall.h
src/dynamic/fuzzing/fuzzsupport/host/: CMakeLists.txt  host.cpp
src/dynamic/fuzzing/hostapis/: hostapis.edl
src/dynamic/fuzzing/hostapis/enc/: CMakeLists.txt  enc.cpp
src/dynamic/fuzzing/hostapis/host/: CMakeLists.txt  host.cpp
src/dynamic/fuzzing/sample/: CMakeLists.txt  README.md  enclavefuzz.edl
src/dynamic/fuzzing/sample/enc/: CMakeLists.txt  enc.cpp
src/dynamic/fuzzing/sample/host/: CMakeLists.txt  host.cpp
src/dynamic/scripts/onefuzz/: run.sh  setup.sh
src/static/codeql/: .codeqlmanifest.json  README.md
src/static/codeql/queries/cpp/: qlpack.yml
src/static/codeql/queries/cpp/openenclave/: DoubleFree.ql  ECall-Args-IsOutsideEnclave.ql  Memory.qll  OCall-Args-InfoDisco.ql  OpenEnclave.qll  PointerDataFlow.qll  UseAfterFree.qll
src/static/codeql/queries/cpp/suites/: codeql-security-queries-only.qls
src/static/codeql/scripts/: codeql.config  codeql.py
